<resources>
    <string name="app_name">Trendhim</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder">Placeholder</string>
    <string name="weekly_look_title">Weekly Looks</string>
    <string name="already_logged_in_message">You are already logged in!</string>
    <string name="log_out_success_message">You have successfully logged out</string>
    <string name="need_to_log_in_first_message">You need to log in first</string>
    <string name="not_logged_in_unsuccess_message">You must be logged in to access these features!</string>
    <string name="added_to_wishlist_success_message">Item successfuly added to wishlist!</string>
    <string name="add_to_cart_button_name">Add to Cart</string>
    <string name="add_to_wishlist_button_name">Add to Wishlist</string>
    <string name="item_already_in_the_wishlist_message">This item is already in the wishlist!</string>
    <string name="item_added_to_cart_message">Item added to the shopping cart</string>
    <string name="item_already_in_cart_message">Item is already in the shopping cart</string>
    <string name="banner_image">BannerImage</string>
    <string name="recent_products">Recent productList</string>
    <string name="no_recent_products_message">You don\'t have recent products</string>
    <string name="brand_name">Brand name</string>
    <string name="product_name">Product name</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign up</string>
    <string name="something_went_wrong">UPS! Something went wrong!</string>
    <string name="incorrect_credentials_message">Incorrect email or password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="email_verification_message">Please verify your email address</string>
    <string name="must_fill_field_messave">This field cannot be empty</string>
    <string name="email_hint">Email</string>
    <string name="email_to_reset_password_message">Enter email to reset your password</string>
    <string name="reset_password_title">Reset password</string>
    <string name="log_in">Log in</string>
    <string name="wishlist_activity_title">Wishlist</string>
    <string name="remove_success_message">Item successfuly removed!</string>
    <string name="weekly_look">Weekly look</string>
    <string name="main_look">Main Look</string>
    <string name="second_look">Second Look</string>
    <string name="third_look">Third Look</string>
    <string name="fourth_look">Fourth Look</string>
    <string name="fifth_look">Fifth Look</string>
    <string name="shop_the_products_from_the_look">Shop the products from the look</string>
    <string name="item_already_in_wishlist">This item is already in the shopping!</string>
    <string name="add">Add</string>
    <string name="complete_payment">Complete payment</string>
    <string name="missing_something_add_it">Missing something? Add it!</string>
    <string name="left_image">Left Image</string>
    <string name="right_image">Right Image</string>
    <string name="positive_option">Yes</string>
    <string name="negative_option">Cancel</string>
    <string name="shopping_cart_title">Shopping cart</string>
    <string name="product_text_view_label">Product</string>
    <string name="quantity_text_view_label">Quantity</string>
    <string name="price_text_view_label_text">Price</string>
    <string name="subtotal_text_view_label_text">Subtotal</string>
    <string name="shipping_text_View_label_text">Shipping</string>
    <string name="grand_total_text_view_label_text">Grand total</string>
    <string name="checkout_button_label_text">Go to checkout</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="initial_value">0</string>
    <string name="trendhim_story_and_core_values">Trendhim story and core values</string>
    <string name="the_trendhim_philosophy_of_awesomeness">The Trendhim philosophy of awesomeness</string>
    <string name="introduction_about_us">Awesomeness is the main deciding factor in all we do at Trendhim. \n\n We only sell products we believe are awesome. We only deliver a service we believe is awesome.\n\n We only hire people we think are awesome.\n\n We give customers 365 days to return products because we believe this is awesome.\n\nWe want our customers to have the best possible shopping experience and fall in love with their new product. \n\nAs simple as that.</string>
    <string name="second_about_us">Read this short story about how Trendhim came to be, from the cradle to adulthood (almost), as we best recall it.</string>
    <string name="header1">All good stories start at the \nbeginning… but not at 4AM</string>
    <string name="about_us_one">About us one</string>
    <string name="body_one">Trendhim was founded in late 2007 by Sebastian and myself (Mikkel). We were just 18 and finishing up our last year of high school.\n We were young, energetic, burning with the desire to start our own business… and fortunately, naive enough to actually go for it.\n\n

        We came up with 2 ideas for what we thought would be a good business.\n A home delivery service for bread on Saturdays and Sundays, and an online store with accessories and jewelry for men.\n\n

        You know how they say entrepreneurs need to do whatever it takes to make their business succeed? \n Well. As much as we would love to agree, we quickly decided that the whole getting up at 4AM to deliver bread thing wasn\'t really our cup of tea.\n\n
        And that was it! Morning bread suffered a swift death, and from the charcoaled ashes of waking up early… rose Trendhim.</string>
    <string name="body_two">With about 4000 euro of hard earned money doing paper routes and binding flowers (A story for another time), we started this great adventure.\n\n

        With our naiveté only surpassed by our drive, we dived head first into everything E-commerce. Coding websites, buying products, taking good care of customers, insurances, accounting, product photography and so much more.\n\n

        We had fire in our stomachs, and wanted to build something awesome!\n\n
            Our closest ones, family and friends, didn\'t always get what we were doing. Some took every opportunity at hand to comment on how great an education is, and how what we were doing was risky.\n\n
        Eventually though, even Sebastian\'s mom, who despite her better gut feeling about her son\'s future, accepted that we were two young people with a quest in our heart, and we weren\'t going to stop.\n\n

        Today she is probably our biggest fan, and spots tiny mistakes on the website before we do.</string>
    <string name="about_us_title">About us</string>
    <string name="must_be_filled_message">This field cannot be empty</string>
    <string name="authentication_fail_message">Ups! Authentication failed.</string>
    <string name="short_password_message">Password has to be at least 6 characters</string>
    <string name="email_format_error_message">Invalid email format</string>
    <string name="email_invalid_message">Invalid email</string>
    <string name="existing_user_message">User already exists</string>
    <string name="email_send_fail">Failed to send verification email.</string>
    <string name="password_mismatch_message">Passwords don\'t match</string>
    <string name="about_us_two">About us two</string>
    <string name="about_us_three">83m2 of Rome</string>
    <string name="body_three">If someone had told us beforehand that we’d have to work 16 hour days, 7 days a week, invest another 10.000 Euro and give up most of our social lives for about 2 years, our expectations about starting a business may have been a bit different. But that\'s where the naivité of two young entrepreneurs with burning desire comes in handy.\n\n
        From 2007 until 2010 we both still had a part-time job at the post office, allowing us to put bread (and sometimes even milk) on the table. \n\n
        Both Sebastian and I, our beds, bathroom, kitchen, inventory and office were situated in an 83m² apartment.\n\n
        Rome wasn\'t built in a day, we knew that.\n\n

        At the end of 2009, we were finally making enough money to quit our jobs and focus on Trendhim full-time. Wow, what a feeling!\n\n

        "I can still vividly remember the strange feeling in my stomach on the way home after I quit my post office job. It was that awkward combination of extreme happiness, excitement, stress, anxiety and an imminent nervous breakdown.
        Was this the right decision? Trendhim would now have to provide full-time salaries for the both of us, with money that might not be there in 6 months.
        At the same time I knew, that now we\'d have even more time to make Trendhim truly amazing."</string>
    <string name="about_us_four">Who needs a bedroom</string>
    <string name="body_four">Things started growing fast. We expanded into new product categories, new countries, and by this point we needed more space, and we needed it badly. We literally had boxes of products in every corner of the apartment, and both slept on small mattresses in the living room.\n\n

        Being two young single guys, we rented a huge villa in a family neighbourhood. Obviously. We thought it was the perfect solution, because then we still wouldn\'t have to drive to work everyday, and could kick ass from morning till sundown at home.</string>
    <string name="about_us_five">A new era</string>
    <string name="body_five">The year 2011 came rolling by, and we needed to move the business again because the owner of the villa was gonna sell it and, for reasons unknown to us, found it very awkward having us there while the new owner moved in.\n\n

        A bit older, a bit wiser, and still very much passionate about building something awesome, we decided to rent a proper 200m² business space.\n\n
       </string>
    <string name="body_five_two"> Me and Sebastian still lived together though. Nothing felt better than working together at home, while the rest of the world was sleeping.</string>
    <string name="about_us_six">A rocket is made to go fast, not straight</string>
    <string name="body_six">We always knew we wanted to be something more than just a web shop retailer. In 2012 we set out on another quest, to build the most awesome brand of accessories for men. Lucleon was born. We worked our asses off for a few years, to create something truly unique down to the last detail.\n\n

    Looking back, we should\'ve kept the focus on Trendhim as a regular store for a little while longer. But when you have so much fire in you, that you become like a rocket, it can be hard to keep that rocket on a straight course.\n\n

    Eventually, we found the perfect balance between Trendhim and Lucleon, and now Lucleon is an integrated part of who we are, and a great statement to what we want to build in the future.\n\n
    However at that time, we simply put too much in our mouths for us to chew at the same time</string>
    <string name="about_us_seven">Redbull and fire makes perfect</string>
    <string name="_0">0</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="street_address">Street address</string>
    <string name="your_basket_is_empty">Your basket is empty</string>
</resources>