<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/address_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/street_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/address_name"
        android:layout_marginTop="10dp"
        android:text="@string/street_address"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/zipcode_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/country_address"
        android:layout_alignBottom="@+id/country_address"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/street_address"
        android:text="@string/zipcode"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/city_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/street_address"
        android:text="@string/city"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/country_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/city_address"
        android:layout_alignBottom="@+id/city_address"
        android:layout_toStartOf="@+id/zipcode_address"
        android:text="@string/country"
        android:textSize="14sp" />

</RelativeLayout>