<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/credentialsLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/trendhimlogo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo" />

        <!-- Email -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <!-- Name -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textFilter"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <!-- Address -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/address_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="textFilter|number"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- ZIP -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/zipcode_credentials"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:hint="@string/zipcode"
                    android:inputType="number"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <!-- City -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city_credentials"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="textFilter"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Country -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/country_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:inputType="textFilter"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <!-- Finish transaction -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/continue_credentials"
            style="@android:style/Widget.Button.Toggle"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/darkGrey"
            android:textSize="14sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ripple_effect_second"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="completeOrder"
            android:padding="12dp"
            android:text="@string/complete_payment"
            android:textStyle="bold" />

        <!-- Missing smth? -->
        <TextView android:id="@+id/missing_credentials"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/missing_something_add_it"
            android:gravity="center"
            android:textSize="14sp"/>

    </LinearLayout>

</ScrollView>