<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signupLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/model_guy"
    android:orientation="vertical"
    android:gravity="center">

    <!--  Email Label -->
    <EditText
        android:id="@+id/input_email_signUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:background="@drawable/round_rect"
        android:textColor="@android:color/darker_gray"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/darker_gray" />

    <!-- Password Label -->
    <EditText
        android:id="@+id/input_password_signUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_rect"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray" />

    <!-- Password Re-enter Label -->
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_rect"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray" />


    <!-- Signup Button -->
    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:onClick="signUp"
        android:text="@string/create_account"/>

</LinearLayout>