<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mainLookImage"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:layout_height="600dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/main_look"/>

            <TextView
                android:id="@+id/lookPhrase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:layout_marginTop="-50dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="34sp"
                android:gravity="center_horizontal"
                android:layout_below="@id/mainLookImage"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/secondLookImage"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:layout_height="600dp"
            android:contentDescription="@string/second_look" />

        <ImageView
            android:id="@+id/thirdLookImage"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:layout_height="300dp"
            android:contentDescription="@string/third_look"/>

        <ImageView
            android:id="@+id/fourthLookImage"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:layout_height="400dp"
            android:contentDescription="@string/fourth_look" />

        <ImageView
            android:id="@+id/fifthLookImage"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:layout_height="300dp"
            android:contentDescription="@string/fifth_look" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/advent_pro_thin"
            android:gravity="center_horizontal"
            android:text="@string/shop_the_products_from_the_look"
            android:textSize="24sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvLookProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp" />

        </GridLayout>

    </LinearLayout>

</ScrollView>
