<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/product_image_main"
        android:layout_width="160dp"
        android:layout_height="170dp"
        android:contentDescription="@string/banner_image" />

    <TextView
        android:id="@+id/brand_name_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/brand_name"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/product_name_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/product_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/product_price_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>